objects/Executive_Escalation__c.object
<CustomObject>
    <description>Used to keep track of executive escalations for cases</description>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Executive Escalations</relationshipLabel>
        <relationshipName>Executive_Escalations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Escalated_Value__c</fullName>
        <label>Escalated Value</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation_Comments__c</fullName>
        <label>Escalation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Escalation_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Escalation Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Executive_Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Removed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Removed?</label>
        <type>Checkbox</type>
    </fields>
    <label>Executive Escalation</label>
    <nameField>
        <displayFormat>EE-{0000}</displayFormat>
        <label>Executive Escalation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Executive Escalations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>